--- a/src/main/resources/i18n/mensagens.properties
+++ b/src/main/resources/i18n/mensagens.properties
@@ -12,3 +12,4 @@ app.instituicao.nova=Nova Instituição
 app.instituicao.nome=Nome da instituição
 app.erroValidacao=O preenchimento do campo é obrigatório.
 app.Confirmar=Confirmar
+app.sucesso=Sucesso
